ajout instagrams, changement de font pour intro, changement de phrases phares, ajout sons 15 sec, ajustement de description

--- a/barday_andy.html
+++ b/barday_andy.html
@@ -108,7 +108,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Architecture</h3>
                 <p class="mb-4"><span class="text-muted">Espace</span></p>
                 <div class="mb-5">
-                  <p>Au cours des années, les enjeux et les méthodes des infrastructures ont changé. Nous cherchons à nous adapter et être durable.</p>
+                  <p>Au cours des années, les enjeux et les méthodes des infrastructures ont changé. Nous cherchons à nous adapter et à être durables.</p>
 
                 </div>
               </div>
@@ -149,7 +149,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/barday_andy.mp3" type="audio/ogg">
   </audio>
 
   <script>
