--- a/ducharme_maika.html
+++ b/ducharme_maika.html
@@ -49,7 +49,7 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a  class="navbar-brand" >Maïka Ducharme</a>
+      <a  class="navbar-brand" >Maika Ducharme</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
     </a>
@@ -124,7 +124,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Deuxième vie</h3>
                 <p class="mb-4"><span class="text-muted">Espace</span></p>
                 <div class="mb-5">
-                  <p>Comment le déclin de la religion au Québec a-t-il emmené une deuxième vie à l'Église ?</p>
+                  <p>Comment le déclin de la religion au Québec a-t-il amené une deuxième vie à l'Église ?</p>
 
                 </div>
               </div>
@@ -165,7 +165,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/ducharme_maika.mp3" type="audio/ogg">
   </audio>
 
   <script>
