--- a/godbout_marianne.html
+++ b/godbout_marianne.html
@@ -160,7 +160,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/godbout_marianne.mp3" type="audio/ogg">
   </audio>
 
   <script>
