--- a/iframe.html
+++ b/iframe.html
@@ -88,9 +88,9 @@ window.onload = setTimeout(function fadeOutEffect() {
 
             <div style="margin-top: 1rem; text-align: left;">
               <div id="cult">
-            <p  style="font-size: 14px">Par l’avènement d’Internet, nous ne sommes plus limités à la culture de notre milieu direct. <span onClick="revcult()"><a id="cultdots" style="cursor: pointer; text-decoration: underline; font-weight: bold;">...</a></span></p>
+            <p  style="font-size: 14px">Notre génération est constamment influencée par l’environnement qui nous entoure. Malgré nous, nos opinions et perceptions se voient être teintées par les milieux physiques et virtuels auxquels nous sommes exposés. <span onClick="revcult()"><a id="cultdots" style="cursor: pointer; text-decoration: underline; font-weight: bold;">...</a></span></p>
           <div id="cult1" style="font-size: 14px;">
-            <p>Notre génération est constamment influencée par l’environnement qui nous entoure. Malgré nous, nos opinions et perceptions se voient être teintées par les milieux physiques et virtuels auxquels nous sommes exposés.  </p>
+            <p>Par l’avènement d’Internet, nous ne sommes plus limités à la culture de notre milieu direct.</p>
             <p>Nous avons grandi dans une ère électronique et nous vivons présentement dans un village global. Les relations intrapersonnelles et interpersonnelles peuvent prendre plusieurs formes. </p>
             <p>Notre génération est confrontée à un fardeau social bien différent de celui des générations précédentes. Ultimement, l’hystérèse culturelle illustre la grande ouverture de notre génération sur le monde. </p>
           </div>
@@ -104,10 +104,10 @@ window.onload = setTimeout(function fadeOutEffect() {
           </div>
         </div>
           <div id="med">
-            <p style="font-size: 14px">En posant leur lentille sur des objets culturels, technologiques, et idéologiques, ces photographes réfléchissent sur notre rapport physique au temps. <span onclick="revmed()"><a id="meddots" style="cursor: pointer; text-decoration: underline; font-weight: bold;" >...</a></span></p>
+            <p style="font-size: 14px">Les effets du temps sont les plus apparents quand ils sont matérialisés dans notre quotidien. <span onclick="revmed()"><a id="meddots" style="cursor: pointer; text-decoration: underline; font-weight: bold;" >...</a></span></p>
         
           <div id="med1" style="font-size: 14px;">
-            <p>Les effets du temps sont les plus apparents quand ils sont matérialisés dans notre quotidien.</p>
+            <p>En posant leur lentille sur des objets culturels, technologiques, et idéologiques, ces photographes réfléchissent sur notre rapport physique au temps.</p>
             <p>À leur manière, les médias sont des lentilles à travers lesquelles nous interprétons l’univers. Des espaces de transition et de traduction.   </p>
             <p>L’influence des technologies et de la virtualité sur notre rapport au monde y sont frappantes, autant les progrès qu’elles apportent que leurs aspects plus discutables. Si les objets s’usent et se voient remplacés ou mis à jour, qu’en est-il de nous et de notre rapport au monde? </p>
           </div>
