--- a/larue_kevin.html
+++ b/larue_kevin.html
@@ -109,7 +109,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Le Bonsecours</h3>
                 <p class="mb-4"><span class="text-muted">Espace</span></p>
                 <div class="mb-5">
-                  <p>Et si on retournait au 20e siècle, lorsqu'aucun véhicule à moteur ou presque n’était perçu au Vieux-Port de Montréal.</p>
+                  <p>Et si on retournait au 20e siècle, alors qu'aucun véhicule à moteur ou presque n’était perçu au Vieux-Port de Montréal.</p>
 
                 </div>
               </div>
@@ -150,7 +150,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/larue_kevin.mp3" type="audio/ogg">
   </audio>
 
   <script>
