--- a/martinezdiaz_andy.html
+++ b/martinezdiaz_andy.html
@@ -55,7 +55,7 @@
     </a>
     </div>
    <div class="container">
-    <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/by____ae/"><span class="@by____ae"></span></a> 
   </div>
     <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="perreault_anais.html">Précédent</a>
@@ -164,7 +164,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/martinezdiaz_andy.mp3" type="audio/ogg">
   </audio>
 
   <script>
