--- a/meunier_sebastien.html
+++ b/meunier_sebastien.html
@@ -49,7 +49,7 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a  class="navbar-brand" >Sébastien Meunier</a>
+      <a  class="navbar-brand" >Sebastien Meunier</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
     </a>
@@ -155,7 +155,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/meunier_sebastien.mp3" type="audio/ogg">
   </audio>
 
   <script>
