--- a/perreault_anais.html
+++ b/perreault_anais.html
@@ -150,7 +150,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/perreault_anais.mp3" type="audio/ogg">
   </audio>
 
   <script>
