--- a/pilon_fabrice.html
+++ b/pilon_fabrice.html
@@ -110,7 +110,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Temps mort</h3>
                 <p class="mb-4"><span class="text-muted">Médias</span></p>
                 <div class="mb-5">
-                  <p>Le temps est omniprésent dans notre société. Autant ça nous permet de nous organiser, autant nous sommes plusieurs qui aimerions pouvoir l'ignorer.</p>
+                  <p>Le temps est omniprésent dans notre société. Autant il nous permet de nous organiser, autant nous sommes plusieurs qui aimerions pouvoir l'ignorer.</p>
 
                 </div>
               </div>
@@ -151,7 +151,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/pilon_fabrice.mp3" type="audio/ogg">
   </audio>
 
   <script>
