--- a/racine_jeremy.html
+++ b/racine_jeremy.html
@@ -49,7 +49,7 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a  class="navbar-brand" >Jérémy Racine</a>
+      <a  class="navbar-brand" >Jeremy Racine</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
     </a>
@@ -114,7 +114,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Au revoir acoustique</h3>
                 <p class="mb-4"><span class="text-muted">Médias</span></p>
                 <div class="mb-5">
-                  <p>L'instrument authentique disparaîtra t-il avec le temps ?</p>
+                  <p>L'instrument authentique disparaîtra-t-il avec le temps ?</p>
 
                 </div>
               </div>
@@ -155,7 +155,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/racine_jeremy.mp3" type="audio/ogg">
   </audio>
 
   <script>
