--- a/rochefort_elianne.html
+++ b/rochefort_elianne.html
@@ -49,13 +49,13 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a  class="navbar-brand" >Élianne Rochefort</a>
+      <a  class="navbar-brand" >Elianne Rochefort</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
     </a>
     </div>
     <div class="container">
-    <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/elianxe/"><span class="elianxe"></span></a> 
   </div>
     <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="fournier_marianne.html">Précédent</a>
@@ -150,7 +150,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/rochefort_elianne.mp3" type="audio/ogg">
   </audio>
 
   <script>
