--- a/thonont_edo.html
+++ b/thonont_edo.html
@@ -120,7 +120,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Faire Un</h3>
                 <p class="mb-4"><span class="text-muted">Culture</span></p>
                 <div class="mb-5">
-                  <p>Les genres fusionnent. Le modèle binaire fond en un ensemble homogène à l'abri des différenciations. Il n'y a plus d'importance accordée à les distinguer.</p>
+                  <p>Les genres fusionnent. Le modèle binaire fond en un ensemble homogène à l'abris des différenciations. Il n'y a plus d'importance accordée à les distinguer.</p>
 
                 </div>
               </div>
@@ -161,7 +161,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/thonont_edo.mp3" type="audio/ogg">
   </audio>
 
   <script>
