--- a/yoshy_roseline.html
+++ b/yoshy_roseline.html
@@ -55,7 +55,7 @@
     </a>
     </div>
     <div class="container">
-    <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/rosiie44/"><span class="@rosiie44"></span></a>
   </div>
   <div style="margin-top: 5%;"class="container"> 
     <p style="margin-left: 3%;"></p>
@@ -130,7 +130,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Retour vers le futur</h3>
                 <p class="mb-4"><span class="text-muted">Culture</span></p>
                 <div class="mb-5">
-                  <p>Accès privilégié dans les archives de la famille Archambault-Cuddihy-Yoshy. Le Retour vers le Futur immortalise le rapport au temps avec une touche humoristique. À quoi ressembleraient ces mêmes photos dans un avenir rapproché ? </p>
+                  <p>Accès privilégié aux archives de la famille Archambault-Cuddihy-Yoshy. Le Retour vers le Futur immortalise le rapport au temps avec une touche humoristique. À quoi ressembleraient ces mêmes photos dans un avenir rapproché ?</p>
 
                 </div>
               </div>
@@ -171,7 +171,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/yoshy_roseline.mp3" type="audio/ogg">
   </audio>
 
   <script>
