--- a/beuzen_alexandre.html
+++ b/beuzen_alexandre.html
@@ -143,7 +143,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/beuzen_alexandre.mp3" type="audio/ogg">
   </audio>
 
   <script>
