--- a/charron_xavier.html
+++ b/charron_xavier.html
@@ -175,7 +175,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/charron_xavier.mp3" type="audio/ogg">
   </audio>
 
   <script>
