--- a/goyette_antoine.html
+++ b/goyette_antoine.html
@@ -156,7 +156,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/goyette_antoine.mp3" type="audio/ogg">
   </audio>
 
   <script>
