--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <source src="vid.mp4" type="video/mp4">
           </video>
           <div class="container">
-            <p class="mb-0" style="font-size: 25px; font-family: remboy; margin: 0 auto; position: absolute; max-width: 800px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. </p>
+            <p class="mb-0" style="font-size: 25px; font-family: charlevoix; margin: 0 auto; position: absolute; max-width: 800px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. </p>
         </div>
 
 		<script>
