--- a/lamer_vickie.html
+++ b/lamer_vickie.html
@@ -163,7 +163,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/lamer_vickie.mp3" type="audio/ogg">
   </audio>
 
   <script>
