--- a/rossignol_thomas.html
+++ b/rossignol_thomas.html
@@ -152,7 +152,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/rossignol_thomas.mp3" type="audio/ogg">
   </audio>
 
   <script>
