--- a/turcotte_rosalie.html
+++ b/turcotte_rosalie.html
@@ -55,7 +55,7 @@
     </a>
     </div>
     <div class="container">
-  <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
+  <a class="artistlink" target="_blank" href="https://www.instagram.com/rosaturcottee/"><span class="@rosaturcotte"></span></a> 
   </div>
      <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="thonont_edo.html">Précédent</a>
@@ -150,7 +150,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="assets/sounds/skype.mp3" type="audio/ogg">
+    <source src="voices/turcotte_rosalie.mp3" type="audio/ogg">
   </audio>
 
   <script>
