--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </video>
           <div class="container">
 
-            <p class="mb-0" style="font-size: 25px; font-family: charlesvoix; margin: 0 auto; position: absolute; max-width: 800px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. <a class="rab">Voir Plus</a></p>
+            <p class="mb-0" style="font-size: 25px; font-family: charlevoix; margin: 0 auto; position: absolute; max-width: 800px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. <a class="rab">Voir Plus</a></p>
 
         </div>
         <div class='customAlert'>
