--- a/martinezdiaz_andy.html
+++ b/martinezdiaz_andy.html
@@ -55,7 +55,7 @@
     </a>
     </div>
    <div class="container">
-    <a class="artistlink" target="_blank" href="https://www.instagram.com/by____ae/"><span class="@by____ae"></span></a> 
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/by____ae/"><span class="bi bi-instagram">@by____ae</span></a> 
   </div>
     <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="perreault_anais.html">Précédent</a>
