--- a/turcotte_rosalie.html
+++ b/turcotte_rosalie.html
@@ -55,7 +55,7 @@
     </a>
     </div>
     <div class="container">
-  <a class="artistlink" target="_blank" href="https://www.instagram.com/rosaturcottee/"><span class="@rosaturcotte"></span></a> 
+  <a class="artistlink" target="_blank" href="https://www.instagram.com/rosaturcottee/"><span class="bi bi-instagram">@rosaturcotte</span></a> 
   </div>
      <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="thonont_edo.html">Précédent</a>
