--- a/yoshy_roseline.html
+++ b/yoshy_roseline.html
@@ -55,7 +55,7 @@
     </a>
     </div>
     <div class="container">
-    <a class="artistlink" target="_blank" href="https://www.instagram.com/rosiie44/"><span class="@rosiie44"></span></a>
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/rosiie44/"><span class="bi bi-instagram">@rosiie44</span></a>
   </div>
   <div style="margin-top: 5%;"class="container"> 
     <p style="margin-left: 3%;"></p>
