--- a/rochefort_elianne.html
+++ b/rochefort_elianne.html
@@ -55,7 +55,7 @@
     </a>
     </div>
     <div class="container">
-    <a class="artistlink" target="_blank" href="https://www.instagram.com/elianxe/"><span class="elianxe"></span></a> 
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/elianxe/"><span class="bi bi-instagram">@elianxe</span></a> 
   </div>
     <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="fournier_marianne.html">Précédent</a>
