--- a/iframe.html
+++ b/iframe.html
@@ -65,7 +65,10 @@ window.onload = setTimeout(function fadeOutEffect() {
   </nav>
 
   <main id="main">
-  
+    <div class="container" style="font-family: Charlevoix; font-weight: bold;">
+    <a style="display: inline;" class="artistlink" target="_self" href="intro.html">Intro</a>
+    <a style="display: inline;" class="artistlink" target="_self" href="about.html">À propos</a>
+  </div>
 <div id="loading">
   <img id="loading-image" src="assets/img/loader.svg" alt="Loading..." />
   <p class="mb-0">Loading ૮꒰ ˶• ༝ •˶꒱ა ♡</p>
@@ -83,7 +86,7 @@ window.onload = setTimeout(function fadeOutEffect() {
 			  <span  onclick="culture()"><a id="culturebut" href="#" data-filter=".culture" class="active">Culture</a></span>
         <span onclick="espace()"><a href="#" data-filter=".espace">Espace</a></span>
 			  <span onclick="medias()"><a href="#"  data-filter=".medias">Médias</a></span>
-      </div><a style="display: inline;" class="artistlink" target="_self" href="about.html">À propos</a>
+      </div>
         </div>
 
             <div style="margin-top: 1rem; text-align: left;">
