--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </video>
           <div class="container">
 
-            <p class="mb-0" style="font-size: 25px; font-family: charlesvoix; margin: 0 auto; position: absolute; max-width: 900px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. <a class="rab">Voir Plus</a></p>
+            <p class="mb-0" style="font-size: 25px; font-family: Charlevoix; margin: 0 auto; position: absolute; max-width: 900px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. <a class="rab">Voir Plus</a></p>
 
         </div>
         <div class='customAlert'>
@@ -149,6 +149,7 @@
 		<script>
             function PlayMain() {
         var audio = document.getElementById("audio_main");
+        audio.volume = 0.15;
         audio.play();
       }
             function EnterSite() {
