--- a/about.html
+++ b/about.html
@@ -94,7 +94,19 @@ Directeur responsable du programme de Baccalauréat en communication (création 
       <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Intégration Web</h2>
       <style>.wavy-text{filter:url('#wavy')}</style><a  target="_blank" href="https://www.instagram.com/edo_xcx/" ><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Edo XCX</h1></a>
       <a target="_blank" href="https://www.instagram.com/cadavre_xquis_/" ><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Luana Bélinsky</h1></a>
-      <a target="_blank" href="https://www.instagram.com/_mariannefournier_/" ><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Marianne Fournier</h1></a>
+      <br>
+      <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Logistique</h2>
+      <a target="_blank" href="https://www.instagram.com/_mariannefournier_/" ><h1 style="letter-spacing: 4px; font-size: 15px;">Marianne Fournier</h1></a>
+      <br>
+      <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Production sonore</h2>
+      <a target="_blank" href="https://www.instagram.com/meloire/" ><h1 style="letter-spacing: 4px; font-size: 15px;">Fabrice Pilon</h1></a>
+      <br>
+      <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Remerciements</h2>
+      <a>Nous voulons remercier le directeur responsable du programme de Baccalauréat en communication (création médias - médias interactifs), monsieur Jean-François Renaud pour sa collaboration tout au long du projet.  
+
+ 
+
+        Un merci tout spécial à Kenny Lefebvre pour son support technique de nos opérations au studio Tokyo, au Service de la reprographie ainsi qu’à l’équipe du Service de l’audiovisuel de l’UQÀM pour leurs précieux conseils et leur générosité à répondre à nos demandes.  </a>
 <svg width="100%" height="100%" style="display:none;">
 <defs>
 <filter id="wavy" filterUnits="userSpaceOnUse" x="0" y="0">
