ajustements photos, remerciements

--- a/fournier_marianne.html
+++ b/fournier_marianne.html
@@ -119,7 +119,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Troisième vague</h3>
                 <p class="mb-4"><span class="text-muted">Culture</span></p>
                 <div class="mb-5">
-                  <p>Avant que ton café soit dans ta tasse, il y a tellement plus d'étapes que l'infusion en tant que telle. Le café Third Wave ramène l'importance de la provenance des grains et du processus de torréfaction. C'est une passion que partagent plein d'artisans locaux, et on s'éloigne avec ça de la torréfaction industrielle faite en usine.</p>
+                  <p>Avant que ton café soit dans ta tasse, il y a tellement plus d'étapes que l'infusion en tant que telle. Le café <i>Third Wave </i>ramène l'importance de la provenance des grains et du processus de torréfaction. C'est une passion que partagent plein d'artisans locaux, et on s'éloigne avec ça de la torréfaction industrielle faite en usine.</p>
 
                 </div>
               </div>
