--- a/yoshy_roseline.html
+++ b/yoshy_roseline.html
@@ -74,15 +74,6 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                  <!-- Slide 1 -->
-                  <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/yoshy_roseline/archive1.jpg"/>
-                  </div>
-
-                  <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/yoshy_roseline/archive2.jpg"/>
-                  </div>
-                  
                   <!-- Slide 2 -->
                   <div class="sp-slide">
                     <img onclick="FullSkreen()" class="sp-image" src="/artistes/yoshy_roseline/1.jpg"/>
@@ -130,7 +121,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Retour vers le futur</h3>
                 <p class="mb-4"><span class="text-muted">Culture</span></p>
                 <div class="mb-5">
-                  <p>Accès privilégié aux archives de la famille Archambault-Cuddihy-Yoshy. Le Retour vers le Futur immortalise le rapport au temps avec une touche humoristique. À quoi ressembleraient ces mêmes photos dans un avenir rapproché ?</p>
+                  <p>Accès privilégié aux archives de la famille Archambault-Cuddihy-Yoshy. Le Retour vers le Futur immortalise le rapport au temps. À quoi ressembleraient ces mêmes photos dans un avenir rapproché ?</p>
 
                 </div>
               </div>
