--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 .customAlert .message {
     margin-top: 10px;
     padding: 0px;
-    color: #AB060A;
+    color: #ffffff;
     font-size: 14px;
     font-weight: normal;
     text-align: center;
@@ -107,7 +107,7 @@
 .customAlert .message {
     margin-top: 10px;
     padding: 0px;
-    color: #AB060A;
+    color: #ffffff;
     font-size: 18px;
     font-weight: normal;
     text-align: center;
