--- a/mediagraphie.html
+++ b/mediagraphie.html
@@ -57,7 +57,7 @@
 		<div style="font-size: 16px;" class="container" data-aos="fade-up">
       <h3>Culture</h3>
 		<p> 
-      1. Roseline C. Yoshy  
+      <b>1. Roseline C. Yoshy </b> 
 
 Archives de la famille Archambault-Cuddihy-Yoshy. [1900-2022].   
 
@@ -67,95 +67,95 @@ Roseline C. Yoshy. [Octobre 2022]. Laval.
 
 </p>  
 <p>
-2. Marianne Fournier  
+<b>2. Marianne Fournier</b>  
 
 Ukers, W. H. [1922]. All About Coffee. New York: The Tea and Coffee Trade Journal.  
 
-Dans Ukersallaboutcoffee.wordpress.com. Récupéré de https://ukersallaboutcoffee. 
+Dans <i>Ukersallaboutcoffee.wordpress.com.</i> Récupéré de https://ukersallaboutcoffee. 
 
 wordpress.com/chapter25/  
 
 </p>  
 <p>
 
-3. Élianne Rochefort  
+<b>3. Élianne Rochefort  </b>
 
-John Seymour. [1961]. The Fat of the Land. Dans Littletoller.co.uk. Récupéré de https://www.littletoller.co.uk/shop/books/little-toller/fat-of-the-land/  
+John Seymour. [1961]. The Fat of the Land. Dans <i>Littletoller.co.uk.</i> Récupéré de https://www.littletoller.co.uk/shop/books/little-toller/fat-of-the-land/  
 
 </p>  
 <p>
 
-4. Thomas Rossignol  
+<b>4. Thomas Rossignol  </b>
 
-GI/Hulton archive. [1970]. Sans titre. Dans Ici.Radio-Canada.ca. Récupéré de https://ici.radio-canada.ca/nouvelle/716506/jour-terre-histoire-evenement  
+GI/Hulton archive. [1970]. Sans titre. Dans <i>Ici.Radio-Canada.ca.</i> Récupéré de https://ici.radio-canada.ca/nouvelle/716506/jour-terre-histoire-evenement  
 
 </p>  
 <p> 
 
-5. Marianne Godbout,  
+<b>5. Marianne Godbout  </b>
 
-Vincent Vauthey. [1983]. Inauguration de Lascaux II. Dans Getty Image.in. Récupéré de https://www.gettyimages.in/detail/news-photo/visitors-inside-lascaux-ii-grotto-in-france-news-photo/627425270?adppopup=true  
+Vincent Vauthey. [1983]. Inauguration de Lascaux II. Dans <i>Getty Image.in.</i> Récupéré de https://www.gettyimages.in/detail/news-photo/visitors-inside-lascaux-ii-grotto-in-france-news-photo/627425270?adppopup=true  
 
 </p>  
 <p> 
 
-6. Edo Thonont  
+<b>6. Edo Thonont  </b>
 
-Fashion History Timeline. [2020]. 1960-1969. Dans Fashion History.fitnyc.edu. Récuperé de https://fashionhistory.fitnyc.edu/1960-1969/  
-
-</p>  
-<p>
-
-7. Rosalie Turcotte  
-
-Anonyme. [2019]. Dans SHOWstudio.com. Récupéré de https://www.showstudio.com/contributors/twiggy-lawson  
+Fashion History Timeline. [2020]. 1960-1969. Dans <i>Fashion History.fitnyc.edu.</i> Récuperé de https://fashionhistory.fitnyc.edu/1960-1969/  
 
 </p>  
 <p>
-8. Vickie Lamer  
 
-Internet Archive. [1898]. Alice's Adventures In Wonderland. Dans Internet Archive.org. Récupéré de https://archive.org/details/alices-adventures-in-wonderland-lewis-carroll/ 
+<b>7. Rosalie Turcotte  </b>
+
+Anonyme. [2019]. Dans <i>SHOWstudio.com.</i> Récupéré de https://www.showstudio.com/contributors/twiggy-lawson  
+
+</p>  
+<p>
+<b>8. Vickie Lamer  </b>
+
+Internet Archive. [1898]. Alice's Adventures In Wonderland. Dans <i>Internet Archive.org.</i> Récupéré de https://archive.org/details/alices-adventures-in-wonderland-lewis-carroll/ 
 
 page/n5/mode/2up  
 
  
 
-Open Library. [1984]. Hans Christian Andersen’s the Little Mermaid. Dans Internet Archive.org. Récupéré de https://openlibrary.org/books/OL7591525M/Hans_Christian_ 
+Open Library. [1984]. Hans Christian Andersen’s the Little Mermaid. Dans <i>Internet Archive.org.</i> Récupéré de https://openlibrary.org/books/OL7591525M/Hans_Christian_ 
 
 Andersen's_the_Little_Mermaid  
 
  
 
-New World Encyclopedia. [1867]. Charles Perrault. Dans New World Encyclopedia.org. Récupéré de https://www.newworldencyclopedia.org/entry/Charles_Perrault  
+New World Encyclopedia. [1867]. Charles Perrault. Dans <i>New World Encyclopedia.org.</i> Récupéré de https://www.newworldencyclopedia.org/entry/Charles_Perrault  
 </p>
 
 <h3>Espace</h3>
 <p>
-  9. Andy Barday   
+  <b>9. Andy Barday   </b>
 
-Wallpaper Flare. [2022]. HD wallpaper: aerial photography of round building, apple park, architecture. Dans Wallpaperflare.com. Récupéré de https://www.wallpaperflare.com/ 
+Wallpaper Flare. [2022]. HD wallpaper: aerial photography of round building, apple park, architecture. Dans <i>Wallpaperflare.com.</i> Récupéré de https://www.wallpaperflare.com/ 
 
 aerial-photography-of-round-building-apple-park-architecture-wallpaper-ejpgn  
 
 </p>  
 <p>
 
-10. Luana Belinsky  
+<b>10. Luana Belinsky  </b>
 
-Bibliothèque et Archives nationales du Québec. Sr Marie-de-l’Eucharistie (Elmina Lefebvre). [1899]. Le passage des cellules Sainte-Famille. Dans BAnQ numérique. Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/3279168?doc 
+Bibliothèque et Archives nationales du Québec. Sr Marie-de-l’Eucharistie (Elmina Lefebvre). [1899]. Le passage des cellules Sainte-Famille. Dans <i>BAnQ numérique.</i> Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/3279168?doc 
 
 searchtext=Couloir%20maison  
 
 </p>  
 <p>
 
-11. Antoine Goyette  
+<b>11. Antoine Goyette  </b>
 
-Bibliothèque et Archives nationales du Québec. J. E. Livernois Photo. [1860-1965]. Château Frontenac. Dans BAnQ numérique. Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/3475605  
+Bibliothèque et Archives nationales du Québec. J. E. Livernois Photo. [1860-1965]. Château Frontenac. Dans <i>BAnQ numérique.</i> Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/3475605  
 
  
 
-Paquin, M. [Jan. 2018]. 23 photos historiques du Château Frontenac. Dans Avenues.ca. Récupéré de https://avenues.ca/comprendre/histoire-en-photos/photos-historiques- 
+Paquin, M. [Jan. 2018]. 23 photos historiques du Château Frontenac. Dans <i>Avenues.ca.</i> Récupéré de https://avenues.ca/comprendre/histoire-en-photos/photos-historiques- 
 
 chateau-frontenac/  
 
@@ -174,9 +174,9 @@ chateau-frontenac/
 
    
 
-12. Benjamin Larivière  
+<b>12. Benjamin Larivière  </b>
 
-Photographe non identifié. [Vers 1900]. Hommes posant à l'entrée du pont Victoria Jubilee. Dans Transports Québec © Héritage - Montreal Je me souviens.blogspot.com. Récupéré de http://montrealjemesouviens.blogspot.com/2012/10/pont-victoria.html   
+Photographe non identifié. [Vers 1900]. Hommes posant à l'entrée du pont Victoria Jubilee. Dans <i>Transports Québec © Héritage - Montreal Je me souviens.blogspot.com.</i> Récupéré de http://montrealjemesouviens.blogspot.com/2012/10/pont-victoria.html   
 
  
 
@@ -185,40 +185,40 @@ Photographe non identifié. [Vers 1900]. Hommes posant à l'entrée du pont Vict
 
  
 
-13. Kevin La Rue  
+<b>13. Kevin La Rue  </b>
 
-Photographe non identifié. [1908]. Marché Bonsecours. Montréal Je me souviens. Dans BAnQ numérique. Récupéré de https://montrealjemesouviens.blogspot.com/2013/05/le-marche-bonsecours.html 
+Photographe non identifié. [1908]. Marché Bonsecours. Montréal Je me souviens. Dans <i>BAnQ numérique.</i> Récupéré de https://montrealjemesouviens.blogspot.com/2013/05/le-marche-bonsecours.html 
 
  
 </p>  
 <p>
   
 
-14. Alexandre Beuzen  
+<b>14. Alexandre Beuzen  </b>
 
 Alexandre Beuzen. [Automne 2021]. Photo originale prise dans la rue.  
 
 </p>  
 <p>
 
-15. Sébastien Meunier  
+<b>15. Sébastien Meunier  </b>
 
-Archive de la ville de Montréal. [1963]. Roger Dubeau, maquettiste travaillant sur la maquette du centre-ville. (VM94-U109-011). Dans Ville.montreal.qc.ca. Récupéré de https://ville.montreal.qc.ca/memoiresdesmontrealais/montreal-et-la-modernite  
+Archive de la ville de Montréal. [1963]. Roger Dubeau, maquettiste travaillant sur la maquette du centre-ville. (VM94-U109-011). Dans <i>Ville.montreal.qc.ca.</i> Récupéré de https://ville.montreal.qc.ca/memoiresdesmontrealais/montreal-et-la-modernite  
 
 </p>  
 <p>
 
-16. Maïka Ducharme   
+<b>16. Maïka Ducharme   </b>
 
-Photographe non identifié. [Vers 1900]. La sortie de la messe à la basilique de Sainte-Anne-de-Beaupré. Dans BAnQ numérique. Récupéré de https://numerique.banq. 
+Photographe non identifié. [Vers 1900]. La sortie de la messe à la basilique de Sainte-Anne-de-Beaupré. Dans <i>BAnQ numérique.</i> Récupéré de https://numerique.banq. 
 
 qc.ca/patrimoine/archives/52327/3112900  
 </p>
 <h3>Médias</h3>
  <p>
-  17. Fabrice Pilon  
+  <b>17. Fabrice Pilon  </b>
 
-  British Broadcasting Corporation. [1922-2009]. BBC archives celebrate 150th anniversary of big ben. Dans BBC.co.uk. Récupéré de https://www.bbc.co.uk/press 
+  British Broadcasting Corporation. [1922-2009]. BBC archives celebrate 150th anniversary of big ben. Dans <i>BBC.co.uk.</i> Récupéré de https://www.bbc.co.uk/press 
   
   office/pressreleases/stories/2009/05_may/28/bigben.shtml  
   
@@ -231,13 +231,13 @@ qc.ca/patrimoine/archives/52327/3112900
   
     
   
-  18. Xavier Charron  
+  <b>18. Xavier Charron  </b>
   
-  Photographe non identifié. [1995]. Photographie d’affiche du “Oui” au référendum québécois de 1995. Dans Ouimonpays.quebec. Récupéré de https://ouimonpays.quebec  
+  Photographe non identifié. [1995]. Photographie d’affiche du “Oui” au référendum québécois de 1995. Dans <i>Ouimonpays.quebec.</i> Récupéré de https://ouimonpays.quebec  
   
    
   
-  Le Courrier de St-Hyacinthe. [Octobre 1977]. Lasalle. Dans BAnQ numérique.   
+  Le Courrier de St-Hyacinthe. [Octobre 1977]. Lasalle. <i>Dans BAnQ numérique. </i>  
   
   Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/2594621  
   
@@ -246,41 +246,41 @@ qc.ca/patrimoine/archives/52327/3112900
 <p>
    
   
-  19. Jérémy Racine  
+  <b>19. Jérémy Racine  </b>
   
   Jérémy Racine. [Avril 2022]. Studio The Grid. Montréal.   
   
 </p>  
 <p> 
   
-  20. Younesse Moubarik  
+  <b>20. Younesse Moubarik  </b>
   
-  Klaus Shulze. [1976]. Brussels radio concert. Dans Klaus Schulze The Official Website. Récupéré de https://www.klaus-schulze.com/photos/7604.htm  
+  Klaus Shulze. [1976]. Brussels radio concert. Dans <i>Klaus Schulze The Official Website.</i> Récupéré de https://www.klaus-schulze.com/photos/7604.htm  
   
    
   
-  Gregory De Rocher. [1996]. Synthetisers. Dans Lowfishmusic.com. Récupéré de https://www.lowfishmusic.com/synthesizers  
+  Gregory De Rocher. [1996]. Synthetisers. Dans <i>Lowfishmusic.com.</i> Récupéré de https://www.lowfishmusic.com/synthesizers  
   
 </p>  
 <p>
   
-  21. Anaïs Perreault   
+  <b>21. Anaïs Perreault   </b>
   
-  Middlebury College Special Collections & Archives. [1961]. Working at the sociology office. Dans Internet Archive. Récupéré de https://archive.org/details/mnb_03-20- 
+  Middlebury College Special Collections & Archives. [1961]. Working at the sociology office. Dans <i>Internet Archive.</i> Récupéré de https://archive.org/details/mnb_03-20- 
   
   1961-04np  
   
 </p>  
 <p>
   
-  22. Andy Martinez Diaz  
+ <b> 22. Andy Martinez Diaz  </b>
   
   Andy Martinez Diaz. [Octobre 2022]. Studio Tokyo. Montréal.  
   
 </p>  
 <p>
   
-  23. Eric Ziehmann   
+  <b>23. Eric Ziehmann   </b>
   
   Dall-E. [Septembre 2022]. Image artificielle générée par Eric Ziehmann x Dall-E. Récupéré de https://labs.openai.com/e/72CD4LPW0bppw5EJxDdWHwe3   
  
