--- a/thonont_edo.html
+++ b/thonont_edo.html
@@ -161,7 +161,7 @@
   <script src="assets/js/main.js"></script>
 
   <audio autoplay="">
-    <source src="voices/thonont_edo.mp3" type="audio/ogg">
+    <source src="voices/wayan_edo.mp3" type="audio/ogg">
   </audio>
 
   <script>
