--- a/mediagraphie.html
+++ b/mediagraphie.html
@@ -57,7 +57,7 @@
 		<div style="font-size: 16px;" class="container" data-aos="fade-up">
       <h3>Culture</h3>
 		<p> 
-      <b>1. Roseline C. Yoshy </b> 
+      <u>1. Roseline C. Yoshy</u> 
 
 Archives de la famille Archambault-Cuddihy-Yoshy. [1900-2022].   
 
@@ -67,7 +67,7 @@ Roseline C. Yoshy. [Octobre 2022]. Laval.
 
 </p>  
 <p>
-<b>2. Marianne Fournier</b>  
+<u>2. Marianne Fournier</u>  
 
 Ukers, W. H. [1922]. All About Coffee. New York: The Tea and Coffee Trade Journal.  
 
@@ -78,41 +78,41 @@ wordpress.com/chapter25/
 </p>  
 <p>
 
-<b>3. Élianne Rochefort  </b>
+<u>3. Élianne Rochefort</u>
 
 John Seymour. [1961]. The Fat of the Land. Dans <i>Littletoller.co.uk.</i> Récupéré de https://www.littletoller.co.uk/shop/books/little-toller/fat-of-the-land/  
 
 </p>  
 <p>
 
-<b>4. Thomas Rossignol  </b>
+<u>4. Thomas Rossignol</u>
 
 GI/Hulton archive. [1970]. Sans titre. Dans <i>Ici.Radio-Canada.ca.</i> Récupéré de https://ici.radio-canada.ca/nouvelle/716506/jour-terre-histoire-evenement  
 
 </p>  
 <p> 
 
-<b>5. Marianne Godbout  </b>
+<u>5. Marianne Godbout</u>
 
 Vincent Vauthey. [1983]. Inauguration de Lascaux II. Dans <i>Getty Image.in.</i> Récupéré de https://www.gettyimages.in/detail/news-photo/visitors-inside-lascaux-ii-grotto-in-france-news-photo/627425270?adppopup=true  
 
 </p>  
 <p> 
 
-<b>6. Edo Thonont  </b>
+<u>6. Edo Thonont</u>
 
 Fashion History Timeline. [2020]. 1960-1969. Dans <i>Fashion History.fitnyc.edu.</i> Récuperé de https://fashionhistory.fitnyc.edu/1960-1969/  
 
 </p>  
 <p>
 
-<b>7. Rosalie Turcotte  </b>
+<u>7. Rosalie Turcotte</u>
 
 Anonyme. [2019]. Dans <i>SHOWstudio.com.</i> Récupéré de https://www.showstudio.com/contributors/twiggy-lawson  
 
 </p>  
 <p>
-<b>8. Vickie Lamer  </b>
+<u>8. Vickie Lamer</u>
 
 Internet Archive. [1898]. Alice's Adventures In Wonderland. Dans <i>Internet Archive.org.</i> Récupéré de https://archive.org/details/alices-adventures-in-wonderland-lewis-carroll/ 
 
@@ -131,7 +131,7 @@ New World Encyclopedia. [1867]. Charles Perrault. Dans <i>New World Encyclopedia
 
 <h3>Espace</h3>
 <p>
-  <b>9. Andy Barday   </b>
+  <u>9. Andy Barday</u>
 
 Wallpaper Flare. [2022]. HD wallpaper: aerial photography of round building, apple park, architecture. Dans <i>Wallpaperflare.com.</i> Récupéré de https://www.wallpaperflare.com/ 
 
@@ -140,7 +140,7 @@ aerial-photography-of-round-building-apple-park-architecture-wallpaper-ejpgn
 </p>  
 <p>
 
-<b>10. Luana Belinsky  </b>
+<u>10. Luana Belinsky</u>
 
 Bibliothèque et Archives nationales du Québec. Sr Marie-de-l’Eucharistie (Elmina Lefebvre). [1899]. Le passage des cellules Sainte-Famille. Dans <i>BAnQ numérique.</i> Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/3279168?doc 
 
@@ -149,7 +149,7 @@ searchtext=Couloir%20maison
 </p>  
 <p>
 
-<b>11. Antoine Goyette  </b>
+<u>11. Antoine Goyette</u>
 
 Bibliothèque et Archives nationales du Québec. J. E. Livernois Photo. [1860-1965]. Château Frontenac. Dans <i>BAnQ numérique.</i> Récupéré de https://numerique.banq.qc.ca/patrimoine/details/52327/3475605  
 
@@ -174,7 +174,7 @@ chateau-frontenac/
 
    
 
-<b>12. Benjamin Larivière  </b>
+<u>12. Benjamin Larivière</u>
 
 Photographe non identifié. [Vers 1900]. Hommes posant à l'entrée du pont Victoria Jubilee. Dans <i>Transports Québec © Héritage - Montreal Je me souviens.blogspot.com.</i> Récupéré de http://montrealjemesouviens.blogspot.com/2012/10/pont-victoria.html   
 
@@ -185,7 +185,7 @@ Photographe non identifié. [Vers 1900]. Hommes posant à l'entrée du pont Vict
 
  
 
-<b>13. Kevin La Rue  </b>
+<u>13. Kevin La Rue</u>
 
 Photographe non identifié. [1908]. Marché Bonsecours. Montréal Je me souviens. Dans <i>BAnQ numérique.</i> Récupéré de https://montrealjemesouviens.blogspot.com/2013/05/le-marche-bonsecours.html 
 
@@ -194,21 +194,21 @@ Photographe non identifié. [1908]. Marché Bonsecours. Montréal Je me souviens
 <p>
   
 
-<b>14. Alexandre Beuzen  </b>
+<u>14. Alexandre Beuzen</u>
 
 Alexandre Beuzen. [Automne 2021]. Photo originale prise dans la rue.  
 
 </p>  
 <p>
 
-<b>15. Sébastien Meunier  </b>
+<u>15. Sébastien Meunier</u>
 
 Archive de la ville de Montréal. [1963]. Roger Dubeau, maquettiste travaillant sur la maquette du centre-ville. (VM94-U109-011). Dans <i>Ville.montreal.qc.ca.</i> Récupéré de https://ville.montreal.qc.ca/memoiresdesmontrealais/montreal-et-la-modernite  
 
 </p>  
 <p>
 
-<b>16. Maïka Ducharme   </b>
+<u>16. Maïka Ducharme</u>
 
 Photographe non identifié. [Vers 1900]. La sortie de la messe à la basilique de Sainte-Anne-de-Beaupré. Dans <i>BAnQ numérique.</i> Récupéré de https://numerique.banq. 
 
@@ -216,7 +216,7 @@ qc.ca/patrimoine/archives/52327/3112900
 </p>
 <h3>Médias</h3>
  <p>
-  <b>17. Fabrice Pilon  </b>
+  <u>17. Fabrice Pilon</u>
 
   British Broadcasting Corporation. [1922-2009]. BBC archives celebrate 150th anniversary of big ben. Dans <i>BBC.co.uk.</i> Récupéré de https://www.bbc.co.uk/press 
   
@@ -231,7 +231,7 @@ qc.ca/patrimoine/archives/52327/3112900
   
     
   
-  <b>18. Xavier Charron  </b>
+  <u>18. Xavier Charron</u>
   
   Photographe non identifié. [1995]. Photographie d’affiche du “Oui” au référendum québécois de 1995. Dans <i>Ouimonpays.quebec.</i> Récupéré de https://ouimonpays.quebec  
   
@@ -246,14 +246,14 @@ qc.ca/patrimoine/archives/52327/3112900
 <p>
    
   
-  <b>19. Jérémy Racine  </b>
+  <u>19. Jérémy Racine</u>
   
   Jérémy Racine. [Avril 2022]. Studio The Grid. Montréal.   
   
 </p>  
 <p> 
   
-  <b>20. Younesse Moubarik  </b>
+  <u>20. Younesse Moubarik</u>
   
   Klaus Shulze. [1976]. Brussels radio concert. Dans <i>Klaus Schulze The Official Website.</i> Récupéré de https://www.klaus-schulze.com/photos/7604.htm  
   
@@ -264,7 +264,7 @@ qc.ca/patrimoine/archives/52327/3112900
 </p>  
 <p>
   
-  <b>21. Anaïs Perreault   </b>
+  <u>21. Anaïs Perreault</u>
   
   Middlebury College Special Collections & Archives. [1961]. Working at the sociology office. Dans <i>Internet Archive.</i> Récupéré de https://archive.org/details/mnb_03-20- 
   
@@ -273,14 +273,14 @@ qc.ca/patrimoine/archives/52327/3112900
 </p>  
 <p>
   
- <b> 22. Andy Martinez Diaz  </b>
+ <u> 22. Andy Martinez Diaz</u>
   
   Andy Martinez Diaz. [Octobre 2022]. Studio Tokyo. Montréal.  
   
 </p>  
 <p>
   
-  <b>23. Eric Ziehmann   </b>
+  <u>23. Eric Ziehmann</u>
   
   Dall-E. [Septembre 2022]. Image artificielle générée par Eric Ziehmann x Dall-E. Récupéré de https://labs.openai.com/e/72CD4LPW0bppw5EJxDdWHwe3   
  
