--- a/ziehmann_eric.html
+++ b/ziehmann_eric.html
@@ -74,6 +74,9 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/ziehmann_eric/archive.jpg"/>
+                  </div>
 
                   <!-- Slide 1 -->
                   <div class="sp-slide">
