--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     margin-top: 10px;
     padding: 0px;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: normal;
     text-align: center;
 }
@@ -139,7 +139,7 @@
           </video>
           <div class="container">
 
-            <p class="mb-0" style="font-size: 25px; font-family: Charlevoix; margin: 0 auto; position: absolute; max-width: 900px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. <a class="rab">Voir plus...</a></p>
+            <p id="txtintro" class="mb-0" style="font-size: 25px; font-family: Charlevoix; margin: 0 auto; position: absolute; max-width: 900px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. <a class="rab">Voir plus...</a></p>
 
         </div>
         <div class='customAlert'>
@@ -155,12 +155,13 @@
             function EnterSite() {
   var x = document.getElementById("content");
   var y = document.getElementById("enter");
-  var homevid =document.getElementById("homevid");
-
+  var homevid = document.getElementById("homevid");
+  var intro = document.getElementById("txtintro");
 
 homevid.style.display= "none";
   y.style.display = "none";
     x.style.display = "block";
+    intro.style.display = "none";
 }
             </script>
             <!-- <script>
