--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@ Directeur responsable du programme de Baccalauréat en communication (création 
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            <p><img style="width: 16px;" src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
