--- a/about.html
+++ b/about.html
@@ -105,6 +105,17 @@ Directeur responsable du programme de Baccalauréat en communication (création 
       <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Production sonore</h2>
       <a target="_blank" href="https://www.instagram.com/meloire/" ><h1 style="letter-spacing: 4px; font-size: 15px;">Fabrice Pilon</h1></a>
       <br>
+      <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Design graphique</h2>
+
+      <h1 style="letter-spacing: 4px; font-size: 15px;">Accueil:<a target="_blank" href="https://www.instagram.com/yyouyyou_/" > Younesse Moubarik</a></h1>
+      <h1 style="letter-spacing: 4px; font-size: 15px;">Bannières:<a target="_blank" href="https://www.instagram.com/elianxe/" > Elianne Rochefort</a></h1>
+      <h1 style="letter-spacing: 4px; font-size: 15px;">Bannières: Anaïs Perrault</h1>
+      <br>
+      <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Rédaction</h2>
+      <a target="_blank" href="https://www.instagram.com/rosiie44/" ><h1 style="letter-spacing: 4px; font-size: 15px;">Roseline C. Yoshy</h1></a>
+      <a target="_blank" href="https://www.instagram.com/seb_fancysheep/" ><h1 style="letter-spacing: 4px; font-size: 15px;">Sébastien Meunier</h1></a>
+      <a target="_blank" href="https://www.instagram.com/marigodbout/" ><h1 style="letter-spacing: 4px; font-size: 15px;">Marianne Godbout</h1></a>
+      <br>
       <br>
       <a style="font-weight: bold; text-decoration: underline; font-size: 20px;" href="mediagraphie.html">Médiagraphie d'archives</a>
 <svg width="100%" height="100%" style="display:none;">
