--- a/meunier_sebastien.html
+++ b/meunier_sebastien.html
@@ -55,7 +55,7 @@
     </a>
     </div>
       <div class="container">
-    <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
+        <a class="artistlink" target="_blank" href="https://www.instagram.com/seb_fancysheep/"><span class="bi bi-instagram"></span> @seb_fancysheep</a>
   </div>
     <div style="margin-top: 5%;"class="container"> 
     <a style="margin-left: 3%; text-decoration: underline" href="beuzen_alexandre.html">Précédent</a>
