Ajustements post reunion chefs
UQÀM --> UQAM
Ajout instagram Younesse
Enlever hyperlien onclick pour photo d'archive
Ajout hyperlien pour référence dans médiagraphie
Remplacement photo d'archive de Anais (elle etait tres floue)

--- a/barday_andy.html
+++ b/barday_andy.html
@@ -74,10 +74,11 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                  <!-- Slide 1 -->
+                 
+
+                     <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://www.wallpaperflare.com/aerial-photography-of-round-building-apple-park-architecture-wallpaper-ejpgn" target="_blank">
-                    <img class="sp-image" src="/artistes/barday_andy/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/barday_andy/archive.jpg"/>
                   </div>
                   
                   <!-- Slide 2 -->
@@ -126,7 +127,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
+            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
