--- a/charron_xavier.html
+++ b/charron_xavier.html
@@ -91,9 +91,10 @@
                   </div>
 
   <!-- Slide 1 -->
+
+                    <!-- Slide 3 -->
                   <div class="sp-slide">
-                    <a href="https://ouimonpays.quebec" target="_blank">
-                    <img class="sp-image" src="artistes/charron_xavier/3archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/charron_xavier/3archive.jpg"/>
                   </div>
 
                   <!-- Slide 3 -->
@@ -116,10 +117,9 @@
                     <img onclick="FullSkreen()" class="sp-image" src="artistes/charron_xavier/7.jpg"/>
                   </div>
 
-                <!-- Slide 1 -->
+                  <!-- Slide 3 -->
                   <div class="sp-slide">
-                    <a href="https://numerique.banq.qc.ca/patrimoine/details/52327/2594621" target="_blank">
-                    <img class="sp-image" src="artistes/charron_xavier/7archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/charron_xavier/7archive.jpg"/>
                   </div>
 
                   <!-- Slide 3 -->
@@ -152,7 +152,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
