--- a/godbout_marianne.html
+++ b/godbout_marianne.html
@@ -74,11 +74,12 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                 <!-- Slide 1 -->
+              
+                   <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://www.gettyimages.in/detail/news-photo/visitors-inside-lascaux-ii-grotto-in-france-news-photo/627425270?adppopup=true" target="_blank">
-                    <img class="sp-image" src="artistes/godbout_marianne/archive.png"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/godbout_marianne/archive.png"/>
                   </div>
+                  
 
                   <!-- Slide 2 -->
                   <div class="sp-slide">
@@ -137,7 +138,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
