--- a/iframe.html
+++ b/iframe.html
@@ -110,7 +110,7 @@ window.onload = setTimeout(function fadeOutEffect() {
             <p style="font-size: 14px">Les effets du temps sont les plus apparents quand ils sont matérialisés dans notre quotidien. <span onclick="revmed()"><a id="meddots" style="cursor: pointer; text-decoration: underline; font-weight: bold;" >...</a></span></p>
         
           <div id="med1" style="font-size: 14px;">
-            <p>En posant leur lentille sur des objets culturels, technologiques, et idéologiques, ces photographes réfléchissent sur notre rapport physique au temps.</p>
+            <p>En posant leur lentille sur des objets culturels, technologiques et idéologiques, ces photographes réfléchissent sur notre rapport physique au temps.</p>
             <p>À leur manière, les médias sont des lentilles à travers lesquelles nous interprétons l’univers. Des espaces de transition et de traduction.   </p>
             <p>L’influence des technologies et de la virtualité sur notre rapport au monde y sont frappantes, autant les progrès qu’elles apportent que leurs aspects plus discutables. Si les objets s’usent et se voient remplacés ou mis à jour, qu’en est-il de nous et de notre rapport au monde? </p>
           </div>
@@ -432,7 +432,7 @@ function medias() {
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div class="credits">
-            <p><img style="width: 16px;" src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
+            <p><img style="width: 16px;" src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
