--- a/intro.html
+++ b/intro.html
@@ -90,7 +90,7 @@
      Nous voulons remercier le directeur responsable du programme de Baccalauréat en communication (création médias - médias interactifs), monsieur Jean-François Renaud pour sa collaboration tout au long du projet.  
     </p>  
       <p>
-      Un merci tout spécial à Kenny Lefebvre pour son support technique de nos opérations au studio Tokyo, au Service de la reprographie ainsi qu’à l’équipe du Service de l’audiovisuel de l’UQÀM pour leurs précieux conseils et leur générosité à répondre à nos demandes.  
+      Un merci tout spécial à Kenny Lefebvre pour son support technique de nos opérations au studio Tokyo, au Service de la reprographie ainsi qu’à l’équipe du Service de l’audiovisuel de l’UQAM pour leurs précieux conseils et leur générosité à répondre à nos demandes.  
       </p>
   
     
@@ -112,7 +112,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div class="credits">
-            <p><img style="width: 16px;" src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
+            <p><img style="width: 16px;" src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
