--- a/lamer_vickie.html
+++ b/lamer_vickie.html
@@ -75,12 +75,6 @@
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
                  
-                      <!-- Slide 1 -->
-                  <div class="sp-slide">
-                    <a href="https://openlibrary.org/books/OL7591525M/Hans_Christian_Andersen's_the_Little_Mermaid" target="_blank">
-                    <img class="sp-image" src="artistes/lamer_vickie/archive3.jpg"/></a>
-                  </div>
-
 
                   <!-- Slide 2 -->
                   <div class="sp-slide">
@@ -100,6 +94,11 @@
                   <!-- Slide 3 -->
                   <div class="sp-slide">
                     <img onclick="FullSkreen()" class="sp-image" src="artistes/lamer_vickie/3.jpg"/>
+                  </div>
+
+                  <!-- Slide 2 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/lamer_vickie/archive3.jpg"/>
                   </div>
 
                   
@@ -129,7 +128,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
