--- a/perreault_anais.html
+++ b/perreault_anais.html
@@ -75,9 +75,10 @@
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
      <!-- Slide 1 -->
+
+                   <!-- Slide 1 -->
                   <div class="sp-slide">
-                    <a href="https://archive.org/details/mnb_03-20-1961-04np" target="_blank">
-                    <img class="sp-image" src="artistes/perreault_anais/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/perreault_anais/archive.jpg"/>
                   </div>
 
                   <!-- Slide 1 -->
@@ -127,7 +128,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
