--- a/pilon_fabrice.html
+++ b/pilon_fabrice.html
@@ -74,12 +74,13 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                     <!-- Slide 1 -->
-                  <div class="sp-slide">
-                    <a href="https://www.bbc.co.uk/pressoffice/pressreleases/stories/2009/05_may/28/bigben.shtml" target="_blank">
-                    <img class="sp-image" src="artistes/pilon_fabrice/Archive.jpg"/></a>
-                  </div>
+                 
 
+ <!-- Slide 1 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/pilon_fabrice/Archive.jpg"/>
+                  </div>
+                  
 
                   <!-- Slide 1 -->
                   <div class="sp-slide">
@@ -128,7 +129,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
