--- a/rossignol_thomas.html
+++ b/rossignol_thomas.html
@@ -96,10 +96,9 @@
                     <img onclick="FullSkreen()" class="sp-image" src="artistes/rossignol_thomas/4.jpg"/>
                   </div>
 
-                   <!-- Slide 1 -->
+                  <!-- Slide 3 -->
                   <div class="sp-slide">
-                    <a href="https://ici.radio-canada.ca/nouvelle/716506/jour-terre-histoire-evenement" target="_blank">
-                    <img class="sp-image" src="artistes/rossignol_thomas/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/rossignol_thomas/archive.jpg"/>
                   </div>
 
                   
@@ -129,7 +128,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
