--- a/turcotte_rosalie.html
+++ b/turcotte_rosalie.html
@@ -75,9 +75,9 @@
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
                 <!-- Slide 1 -->
+                   <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://www.showstudio.com/contributors/twiggy-lawson" target="_blank">
-                    <img class="sp-image" src="artistes/turcotte_rosalie/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/turcotte_rosalie/archive.jpg"/>
                   </div>
 
                   <!-- Slide 2 -->
@@ -127,7 +127,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
