--- a/belinsky_luana.html
+++ b/belinsky_luana.html
@@ -75,9 +75,9 @@
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
                   <!-- Slide 1 -->
+                   <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://numerique.banq.qc.ca/patrimoine/details/52327/3279168?docsearchtext=Couloir%20maison" target="_blank">
-                    <img class="sp-image" src="/artistes/belinsky_luana/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/belinsky_luana/archive.jpg"/>
                   </div>
                   
                   <!-- Slide 2 -->
@@ -127,7 +127,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
+            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
