--- a/fournier_marianne.html
+++ b/fournier_marianne.html
@@ -74,10 +74,11 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                  <!-- Slide 1 -->
+                 
+
+                  <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://ukersallaboutcoffee.wordpress.com/chapter25/" target="_blank">
-                    <img class="sp-image" src="artistes/fournier_marianne/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/fournier_marianne/archive.jpg"/>
                   </div>
                   
                   <!-- Slide 2 -->
@@ -137,7 +138,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
