--- a/goyette_antoine.html
+++ b/goyette_antoine.html
@@ -74,12 +74,13 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                  <!-- Slide 1 -->
+               
+<!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://numerique.banq.qc.ca/patrimoine/details/52327/3475605" target="_blank">
-                    <img class="sp-image" src="/artistes/goyette_antoine/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/goyette_antoine/archive.jpg"/>
                   </div>
                   
+
                   <!-- Slide 2 -->
                   <div class="sp-slide">
                     <img onclick="FullSkreen()" class="sp-image" src="/artistes/goyette_antoine/1.jpg"/>
@@ -133,7 +134,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
+            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
