--- a/meunier_sebastien.html
+++ b/meunier_sebastien.html
@@ -75,9 +75,9 @@
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
                  <!-- Slide 1 -->
+                  <!-- Slide 3 -->
                   <div class="sp-slide">
-                    <a href="https://ville.montreal.qc.ca/memoiresdesmontrealais/montreal-et-la-modernite" target="_blank">
-                    <img class="sp-image" src="artistes/meunier_sebastien/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/meunier_sebastien/archive.jpg"/>
                   </div>
 
                     <!-- Slide 3 -->
@@ -132,7 +132,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
