--- a/rochefort_elianne.html
+++ b/rochefort_elianne.html
@@ -74,11 +74,13 @@
             <div class="col-md-8" data-aos="fade-up">
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
-                 <!-- Slide 1 -->
+              
+
+                   <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://www.littletoller.co.uk/shop/books/little-toller/fat-of-the-land/" target="_blank">
-                    <img class="sp-image" src="artistes/rochefort_elianne/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/rochefort_elianne/archive.jpg"/>
                   </div>
+                  
 
                   <!-- Slide 2 -->
                   <div class="sp-slide">
@@ -127,7 +129,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
