--- a/thonont_edo.html
+++ b/thonont_edo.html
@@ -75,9 +75,9 @@
               <div class="slider-pro" id="my-slider">
                 <div class="sp-slides">
                  <!-- Slide 1 -->
+                <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <a href="https://fashionhistory.fitnyc.edu/1960-1969/" target="_blank">
-                    <img class="sp-image" src="artistes/thonont_edo/archive.jpg"/></a>
+                    <img onclick="FullSkreen()" class="sp-image" src="artistes/thonont_edo/archive.jpg"/>
                   </div>
 
                   
@@ -138,7 +138,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            Médias Interactifs (UQAM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
