--- a/yoshy_roseline.html
+++ b/yoshy_roseline.html
@@ -139,7 +139,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
+            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
